gccida/c3/is_valid_printf_arglist
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4291:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4292:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4293:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4294:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4295:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *value; // [rsp+0h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4296:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *identifier; // [rsp+8h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4297:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *purpose; // [rsp+10h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4298:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attrs; // [rsp+18h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4309:22: error: expected expression
value = ( tree_node *)*( &global_trees + 12); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/c-common.c:4309:11: error: use of undeclared identifier 'tree_node'
value = ( tree_node *)*( &global_trees + 12); 
          ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/is_valid_printf_arglist/src/obj/c-common.o] Error 1
